make buttons on home page more noticeable, sync textual input on creating a place with ownership and update delete place authorization text with target age group and ownership. fix mis-sized icons and missing borders on update/add event pages.

--- a/what2do2day/static/assets/css/style.css
+++ b/what2do2day/static/assets/css/style.css
@@ -328,6 +328,75 @@ a.button.is-link.home-btn-1, a.button.is-link.home-btn-2 {
     font-family: Patrick Hand SC, Arial, sans-serif;
     border: 1px solid;
 
+    -webkit-animation: btnWiggle 5s infinite;
+    -moz-animation: btnWiggle 5s infinite;
+    -o-animation: btnWiggle 5s infinite;
+    animation: btnWiggle 5s infinite;
+}
+
+a.button.is-link.home-btn-2 {
+    animation-delay: 2.5s;
+}
+
+/* animation */
+@-webkit-keyframes btnWiggle {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    2% {
+        -webkit-transform: rotate(-1deg);
+    }
+    3.5% {
+        -webkit-transform: rotate(1deg);
+    }
+    5% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(0deg);
+    }
+}
+
+@-o-keyframes btnWiggle {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    2% {
+        -webkit-transform: rotate(-1deg);
+    }
+    3.5% {
+        -webkit-transform: rotate(1deg);
+    }
+    5% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(0deg);
+    }
+}
+
+@keyframes btnWiggle {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    2% {
+        -webkit-transform: rotate(-1deg);
+    }
+    3.5% {
+        -webkit-transform: rotate(1deg);
+    }
+    5% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(0deg);
+    }
+}
+
+a.button.is-link.home-btn-1:hover, a.button.is-link.home-btn-2:hover {
+    background-color: #003fa5;
+    transform: rotate(-3deg) scale(1.3);
+    -webkit-animation: 0;
 }
 
 /* submit button overrides */
@@ -671,11 +740,19 @@ input:checked + .slider:before {
 }
 
 .list-events .card.button.is-primary.iconpicker {
-    border-right: 2px solid rgb(0, 209, 178);
+    border: 2px solid rgb(0, 209, 178);
 }
 
 .card.button img {
     max-height: 130px;
+}
+
+a.card.button.ages .card-content {
+    padding: 1rem;
+}
+
+.card.button.ages img {
+    max-height: 80px;
 }
 
 .card.button {
@@ -721,6 +798,7 @@ input:checked + .slider:before {
 
 .card.button.iconpicker img {
     max-height: 60px;
+    max-width: 60px;
 }
 
 .card.button.iconpicker .card-content {
@@ -731,6 +809,7 @@ a.card.button.is-primary.iconpicker {
     margin: 10px;
     height: 100%;
     width: 100%;
+    max-height: 150px;
 }
 
 .iconpicker .media-con {
@@ -848,7 +927,8 @@ nav.level.is-primary .level-item {
     background: url(../images/success.png) center center no-repeat;
     background-size: cover;
 }
-.warning .image-holder{
+
+.warning .image-holder {
     height: 250px;
     width: 250px;
     background: url(../images/warning.png) center center no-repeat;
@@ -872,13 +952,15 @@ nav.level.is-primary .level-item {
 .join-event .modal-card-body .is-half {
     margin-bottom: 10px;
 }
-.modal-card-foot.warning{
+
+.modal-card-foot.warning {
     display: flex;
     justify-content: space-around;
     padding: 20px 0;
     margin: 0;
 }
-.modal-card-foot.warning a.button{
+
+.modal-card-foot.warning a.button {
     min-width: 110px;
 }
 
@@ -896,6 +978,10 @@ span#event-modal-title {
     margin: 0;
     display: block;
     position: relative;
+}
+
+span.note {
+    font-size: .95rem;
 }
 
 .join-event .is-bold.column {
@@ -1281,6 +1367,20 @@ i.not-shared {
         margin: 15px 0 0 15px;
     }
 
+    a.card.button.is-primary.iconpicker {
+        max-height: 170px;
+        max-width: 100%;
+        height: 170px;
+    }
+
+    .container.ages .card, .container.activities .card {
+        height: 220px;
+    }
+
+    .card.button.ages img {
+        max-height: 120px;
+    }
+
     div.stars {
         margin-top: 0;
     }
@@ -1432,6 +1532,7 @@ i.not-shared {
     a.button.is-link.home-btn-2 {
         margin-left: 100px;
     }
+
 }
 
 
